--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,6 @@ email: wabarr@gmail.com
 avatar: images/avatar.png
 base_url: http://bovids.are-awesome.com
 permalink: none
-tagline: a tour of bovid diversity
+tagline: All antelopes.  All the time.
+google-analytics-id: '1'
 #blog logo
